--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "assets/gonuxt"]
-	path = assets/gonuxt
+	path = assets/gonuxt-assets
 	url = git@github.com:gdsc-osaka/gonuxt-assets.git
 [submodule "gonuxt"]
 	path = gonuxt
